# axiom

./: .clang-tidy  .cmake-format.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.claude/: CLAUDE.md
.github/workflows/: build_and_test.yml  macos.yml  velox-status.yml
CMake/: AxiomUtils.cmake
axiom/cli/: AlignedTablePrinter.cpp  AlignedTablePrinter.h  AxiomSql.cpp  CMakeLists.txt  CatalogProperties.cpp  CatalogProperties.h  Connectors.cpp  Connectors.h  Console.cpp  Console.h  GenerateTpchData.cpp  JsonPrinter.cpp  JsonPrinter.h  LiveProgressDisplay.cpp  LiveProgressDisplay.h  OutputFormat.cpp  OutputFormat.h  OutputPrinter.h  QueryGraphviz.cpp  QueryIdGenerator.cpp  QueryIdGenerator.h  README.md  ResultPrinter.cpp  ResultPrinter.h  SqlQueryRunner.cpp  SqlQueryRunner.h  StdinReader.cpp  StdinReader.h  SystemUser.cpp  SystemUser.h  Timing.cpp  Timing.h
axiom/common/: CMakeLists.txt  ConfigRegistry.cpp  ConfigRegistry.h  Enums.h  QueryRuntimeStats.cpp  QueryRuntimeStats.h  SchemaFunctionName.cpp  SchemaFunctionName.h  SchemaProcedureName.cpp  SchemaProcedureName.h  Session.cpp  Session.h  SessionConfig.cpp  SessionConfig.h  TrackedExecutor.cpp  TrackedExecutor.h  WriteKind.cpp  WriteKind.h
axiom/connectors/: BaseSession.h  CMakeLists.txt  ConnectorMetadata.cpp  ConnectorMetadata.h  ConnectorPushdown.h  ConnectorSession.cpp  ConnectorSession.h  ConnectorSplitManager.cpp  ConnectorSplitManager.h  MaterializedViewDefinition.cpp  MaterializedViewDefinition.h  SchemaResolver.cpp  SchemaResolver.h  SchemaUtils.cpp  SplitWeight.cpp  SplitWeight.h
axiom/graphviz/: DerivedTableDotPrinter.cpp  LogicalPlanDotPrinter.cpp
axiom/logical_plan/: CMakeLists.txt  Enums.h  Expr.cpp  Expr.h  ExprApi.cpp  ExprApi.h  ExprPrinter.cpp  ExprResolver.cpp  ExprResolver.h  ExprVisitor.h  LogicalPlanDotPrinter.cpp  LogicalPlanDotPrinter.h  LogicalPlanNode.cpp  LogicalPlanNode.h  NameAllocator.cpp  NameMappings.cpp  NameMappings.h  PlanBuilder.cpp  PlanBuilder.h  PlanNodeVisitor.h  PlanPrinter.cpp  PlanPrinter.h
axiom/optimizer/: AggregationPlanner.cpp  AggregationPlanner.h  BitSet.h  BuiltinNames.cpp  BuiltinNames.h  CMakeLists.txt  Cost.cpp  (+75 more)
axiom/optimizer/tests/utils/: Bucketize.cpp  Bucketize.h  BucketizeImpl.h  CMakeLists.txt  ComputeSigridHash.h  ComputeSigridHashAvx2.cpp  ComputeSigridHashAvx512.cpp  ConvertFormat.cpp  ConvertFormat.h  DfFunctions.cpp  FirstX.cpp  FirstX.h  Register.cpp  Register.h  SigridHash.cpp  SigridHash.h  Utils.cpp  Utils.h
axiom/optimizer/v2/: AggregateRecovery.cpp  AggregateRecovery.h  AlgebraicProperties.cpp  AlgebraicProperties.h  AppendAll.h  Builder.cpp  Builder.h  CMakeLists.txt  ConnectorPushdownPass.cpp  ConnectorPushdownPass.h  Cost.h  CostModel.cpp  CostModel.h  DPhyp.cpp  DPhyp.h  DecorrelatePass.cpp  DecorrelatePass.h  EmitPass.cpp  EmitPass.h  EstimateLeafStatsPass.cpp  EstimateLeafStatsPass.h  EstimateProvider.cpp  EstimateProvider.h  ExpandAggregatePass.cpp  ExpandAggregatePass.h  ExprEmitter.cpp  ExprEmitter.h  ExprFactory.cpp  ExprFactory.h  ExprSimplifier.cpp  ExprSimplifier.h  FoldEmptyInputsPass.cpp  FoldEmptyInputsPass.h  FoldMetadataAggregatePass.cpp  FoldMetadataAggregatePass.h  HypergraphBuilder.cpp  HypergraphBuilder.h  JoinCluster.h  JoinCondition.cpp  JoinCondition.h  (+37 more)
axiom/optimizer/v2/docs/: Decorrelate-agg-rules.md  Decorrelate-design-rationale.md  Decorrelate-driver.md  Decorrelate-enforce-single-row.md  Decorrelate-filter-rules.md  Decorrelate-join-rules.md  Decorrelate-limit-rules.md  Decorrelate-outer-refs-design.md  Decorrelate-project-rules.md  Decorrelate.md  DistributedDynamicFilters.md  JoinEnumerationScaling.md  TpchV1V2PlanComparison.md
axiom/optimizer/v2/tests/: AlgebraicPropertiesTest.cpp  CMakeLists.txt  ConnectorPushdownPassTest.cpp  EmptyFoldTest.cpp  JoinHypergraphTest.cpp  NodePrinterTest.cpp  NodeRewriterTest.cpp  NodeTransformTest.cpp  RelationSetTest.cpp  TpchPlanTest.cpp  TpchResultTest.cpp  UnitTestBase.h
optimizer/: BitSet.h  Cost.cpp  Cost.h  Filters.cpp  JoinSample.cpp  ParallelExpr.cpp  ParallelProject.h  Plan.cpp  Plan.h  PlanObject.cpp  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  RelationOp.cpp  RelationOp.h  Schema.cpp  Schema.h  Subfields.cpp  ToGraph.cpp  ToVelox.cpp  VeloxHistory.cpp  VeloxHistory.h
scripts/: license-header.py
(+559 files in other folders)
